--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,11 +6,14 @@
         <item name="colorPrimary">@color/green_teal_600</item>
         <item name="colorPrimaryDark">@color/green_teal_700</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:displayOptions">useLogo</item>
+        <item name="android:textAllCaps">false</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="android:textAllCaps">false</item>
 
     </style>
 
@@ -23,6 +26,7 @@
         <item name="tabIndicatorHeight">5dp</item>
         <item name="tabPaddingStart">8dp</item>
         <item name="tabPaddingEnd">8dp</item>
+        <item name="android:textAllCaps">false</item>
     </style>
 
 
