--- a/app/src/main/res/layout/content_project_submit.xml
+++ b/app/src/main/res/layout/content_project_submit.xml
@@ -29,7 +29,7 @@
                 android:id="@+id/txtProjectSubmission"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="30dp"
+
                 android:ems="10"
                 android:paddingBottom="10dp"
                 android:textSize="20sp"
@@ -38,6 +38,13 @@
                 android:inputType="textPersonName"
                 android:text="Project Submission"
                 android:textColor="#FF9800" />
+
+            <View
+                android:id="@+id/separator"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginBottom="30dp"
+                android:background="@drawable/gradient_line" />
 
             <LinearLayout
                 android:layout_width="match_parent"
