--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="green_teal_600">#00897B</color>
     <color name="green_teal_700">#00796B</color>
 
+    <color name="black_overlay">#66000000</color>
+
 </resources>
